--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
+    "assert": "^2.0.0",
+    "buffer": "^5.7.1",
     "classnames": "^2.3.2",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
