filter and marks by words was implemented

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "react",
     "@typescript-eslint"
   ],
+  "react/display-name": ["enabled", { "ignoreTranspilerName": "boolean" }],
   "rules": {},
   "settings": {
     "react": {
