--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.2.2",
+    "mark.js": "^8.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-mark.js": "^9.0.7",
     "react-redux": "^8.0.5"
   },
   "browserslist": {
