--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "codebridge",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://Anton-Liada.github.io/codebridge/",
   "source": "public/index.html",
   "scripts": {
     "predeploy": "rm -rf build & npm run build",
     "deploy": "gh-pages -d public",
     "dev": "parcel -p 7000 --open",
-    "build": "parcel build",
+    "build": "parcel build public/index.html --public-url /codebridge/",
     "typecheck": "npx tsc",
     "checkformat": "prettier --check \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
