--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "homepage": "https://Anton-Liada.github.io/codebridge/",
   "source": "public/index.html",
   "scripts": {
-    "predeploy": "rm -rf build & npm run build",
-    "deploy": "gh-pages -d public",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "parcel -p 7000 --open",
     "build": "parcel build public/index.html --public-url /codebridge/",
-    "typecheck": "npx tsc",
     "checkformat": "prettier --check \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
